--- a/Quality/Quality/Areas/BulkFGT/Views/MockupOvenTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupOvenTest/Index.cshtml
@@ -340,14 +340,10 @@
                                     <td><h5>Result</h5></td>
                                     <td>
                                         @{
-                                            string styleColor = "";
+                                            string styleColor = "red";
                                             if (Model.Result == "Pass")
                                             {
                                                 styleColor = "blue";
-                                            }
-                                            else
-                                            {
-                                                styleColor = "red";
                                             }
                                         }
                                         <font id="Result" class="@styleColor">@Model.Result</font>
@@ -518,7 +514,14 @@
                                             </div>
                                         </td>
                                         <td>
-                                            <select id="MockupOven_Detail_@{@i}Result" name="MockupOven_Detail[@i].Result" class="OnlyEdit result" onchange="changeResult()" style="width:157px;">
+                                            @{ 
+                                                styleColor = "red";
+                                                if (Model.MockupOven_Detail[i].Result == "Pass")
+                                                {
+                                                    styleColor = "blue";
+                                                }
+                                            }
+                                            <select id="MockupOven_Detail_@{@i}Result" name="MockupOven_Detail[@i].Result" class="OnlyEdit result @styleColor" onchange="changeResult()">
                                                 @foreach (var item in (List<SelectListItem>)ViewBag.ResultList)
                                                 {
                                                     string selected = item.Text.Equals(Model.MockupOven_Detail[i].Result) ? "selected" : "";
@@ -632,7 +635,7 @@
 
     function Clear() {
         if (EditType == "New") {
-            $(".DataTable input[type='text'], .DataTable select").val('');
+            $(".DataTable input, .DataTable select").val('');
             $('#Result').html('');
         }
     }
@@ -1355,13 +1358,16 @@
 
     function changeResult() {
         var result = 'Pass';
+        var color = 'blue';
         $(".result").each(function () {
             if ($(this).val() != "Pass") {
                 result = 'Fail';
+                color = 'red';
             }
+            $(this).removeClass('blue').removeClass('red').addClass(color);
         });
 
-        $('#Result').val(result);
+        $('#Result').html(result).removeClass('blue').removeClass('red').addClass(color);
     }
 
     function AddDetailRow() {
