ISP20211064 - [Mockup Crocking]、[Mockup Wash]、[Mockup Oven] 調整

--- a/Quality/Quality/Areas/BulkFGT/Views/MockupCrocking/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupCrocking/Index.cshtml
@@ -578,7 +578,7 @@
 
     function Clear() {
         if (EditType == "New") {
-            $(".DataTable input, .DetailTable select").val('');
+            $(".DataTable input[type='text'], .DataTable input[type='number'], .DataTable select").val('');
             $('#Result').html('');
         }
     }
