ISP20211069 - [Fabric Oven] 調整

--- a/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Detail.cshtml
@@ -441,7 +441,7 @@
     var EditMode;
     $(function () {
         msg = new MessagerAlert();
-        EditMode = false;
+        EditMode = ('@ViewBag.EditMode' == 'True');
         @Html.Raw(Model.ErrorMessage)
         IsEditModeChange();
     });
