ISP20211072 - [Fabric Color Fastness] 調整

--- a/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Detail.cshtml
@@ -678,6 +678,30 @@
                 return;
             }
 
+            var detailMsg = "";
+            $('.DetailTable > tbody > tr').each(function (index, data) {
+                var idx = $(this).closest('tr').attr('idx');
+                if ($("#Detail_" + idx + "__Seq").val() == "") {
+                    detailMsg += "SEQ cannot be empty.";
+                    return false;
+                }
+
+                if ($("#Detail_" + idx + "__Roll").val() == "") {
+                    detailMsg += "Roll cannot be empty.";
+                    return false;
+                }
+
+                if ($("#Detail_" + idx + "__Dyelot").val() == "") {
+                    detailMsg += "Dyelot cannot be empty.";
+                    return false;
+                }
+            });
+
+            if (detailMsg != '') {
+                msg.WithWarning(detailMsg);
+                return false;
+            }
+
             $('.DetailTable > tbody > tr').each(function (index, data) {
                 var idx = $(this).closest('tr').attr('idx');
                 if (idx != index) {
@@ -733,15 +757,20 @@
 
                 var Body, SEQ, Result;
                 var ChangeScale, StainingScale, ResultChange, ResultStain;
+                $(this).children().find("input[type='number']").each(function (index, value) {
+                    switch (index) {
+                        case 0:
+                            Body = $(this).val();
+                            break;
+                    }
+                })
+
                 $(this).children().find("input[type='text']").each(function (index, value) {
                     switch (index) {
                         case 1:
-                            Body = $(this).val();
-                            break;
-                        case 2:
                             SEQ = $(this).val();
                             break;
-                        case 8:
+                        case 7:
                             Result = $(this).val();
                             break;
                     }
